--- a/Feb-4/Unsplash.html
+++ b/Feb-4/Unsplash.html
@@ -18,7 +18,7 @@
         <input type="search" id="search" placeholder="Search the image"> <i id="abb" class="fas fa-search"></i>
     </div>
     <div class="container">
-        <img src="" id="img" alt="">
+        <img src="" id="img" alt="First Search Image">
         
     </div>
     <script src="unsplash.js" ></script>
